# CryptoCustodyOS

api/: jest.config.js  package-lock.json  package.json  tsconfig.json
api/src/: app.module.ts  main.ts
api/src/address/: address.controller.ts  address.entity.ts  address.module.ts  address.service.ts
api/src/api-key/: api-key.controller.ts  api-key.entity.ts  api-key.module.ts  api-key.service.ts
api/src/approval/: approval-workflow.service.ts  approval.entity.ts  approval.module.ts
api/src/audit-log/: audit-log.controller.ts  audit-log.entity.ts  audit-log.module.ts  audit-log.service.ts
api/src/database/: data-source.ts
api/src/key/: key.entity.ts  key.module.ts  key.service.ts
api/src/policy/: address-cooldown.entity.ts  destination-allowlist.entity.ts  policy-rule.entity.ts  policy.controller.ts  policy.entity.ts  policy.module.ts  policy.service.ts  required-approval.entity.ts
api/src/role/: role.controller.ts  role.entity.ts  role.service.ts
api/src/tenant/: tenant.controller.ts  tenant.entity.ts  tenant.module.ts  tenant.service.ts
api/src/transaction-builder/: canonical-json.ts  fee.service.ts  psbt-builder.service.ts  utxo.service.ts  (+1 more)
api/test/: address.e2e-spec.ts  address.service.spec.ts  app.e2e-spec.ts  approval-workflow.service.spec.ts  fee.service.spec.ts  jest-e2e.json  key.service.spec.ts  policy.service.spec.ts  psbt-builder.service.spec.ts  transaction.service.spec.ts  utxo.service.spec.ts
signer-cli/: Cargo.toml  README.md
signer-cli/src/: canonical.rs  key_store.rs  lib.rs  main.rs  payload.rs
signer-cli/tests/: cli.rs
(+29 files in other folders)
