[package]
name = "custody-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
base64ct = "=1.6.0"
bitcoin = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "=4.5.20", features = ["derive", "env"] }
hex = "0.4"
rand = "0.8"
rpassword = "=7.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.10.1"
